# python-monorepo

./: .gitignore  README.md  REAMDE.md
libs/libml/: pyproject.toml
libs/libml/libml/: main.py
libs/libmq/: pyproject.toml
libs/libmq/libmq/: main.py
libs/libtelemetry/: pyproject.toml
libs/libtelemetry/libtelemetry/: main.py
stack/service-ml-common/: Dockerfile  pyproject.toml
stack/service-ml-common/service_ml_common/: main.py
stack/service-ml-custom/: Dockerfile  Makefile  pyproject.toml
stack/service-ml-custom/service_ml_custom/: main.py
stack/service-one/: Dockerfile  pyproject.toml
stack/service-one/service_one/: main.py
stack/service-two/: Dockerfile  pyproject.toml
tools/: Containers.mk  Packages.mk  ci-build.sh  cloudbuild.yaml  docker-build.sh  poetry.dockerfile
