[tool.poetry]
name = "libmq"
version = "0.1.0"
description = ""
authors = ["Danny Graham <good.midget@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
