[tool.poetry]
name = "service-ml-custom"
version = "0.1.0"
description = ""
authors = ["Danny Graham <good.midget@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
libtelemetry = ""
lightgbm = "2.3.1"
numpy = "1.18.1"
pandas = "1.1.1"
scikit-learn = "0.22.2.post1"
scipy = "1.4.1"
sentence_transformers = "1.0.3"
simpletransformers = "0.60.6"
spacy = "2.2.4"
tensorflow = "2.2.0"
tensorflow_hub = "0.8.0"
tokenizers = "0.10.1"
tqdm = "4.56.0"
transformers = "4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
libtelemetry = {path = "../../libs/libtelemetry", develop = true}

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
